--- a/block-BHaacm/index.html
+++ b/block-BHaacm/index.html
@@ -13,8 +13,8 @@
 	</head>
 	<body>
         <header class="header">
-            <div class="container flex padding">
-                <a herf="#"><img src="assets/media/logo.png" alt="brand logo"></a>
+            <div class="container flex padding coloum ">
+                <a  class="brand"herf="#"><img src="assets/media/logo.png" alt="brand logo"></a>
             <nav class="nav">
                 <ul class="flex nav-link">
                     <li><a href="#">Home</a></li>
@@ -30,8 +30,8 @@
         <main>
             <!-----article-section--------->
             <section class="article-section padding">
-                <article class="container flex padding">
-                    <div class="flex-45 ">
+                <article class="container flex padding wrap">
+                    <div class="flex-45 flex-100 order-1">
                         <h1 class="heading">What is loreum Ipsum ?</h1>
                         <p class="text">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam repudiandae ad ea, suscipit illo, 
@@ -42,7 +42,7 @@
                         </p>
                         <a class="btn" href="#">Read More</a>
                     </div>
-                    <div class="flex-45">
+                    <div class="flex-45 flex-100">
                         <img class="width-full"src="assets/media/01.png" alt="image-1">
                     </div>
                 </article>
@@ -51,22 +51,22 @@
             <section>
                 <div class="container padding gallery">
                     <h2 >OUR BLOG</h2>
-                    <div class="flex">
-                        <div class="flex-30 item">
+                    <div class="flex wrap">
+                        <div class="flex-30 item flex-100">
                             <img  class="width-full"src="assets/media/02.png" alt="image-2">
                             <h3>Why Do we use it?</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam repudiandae ad ea, suscipit illo, 
                                 modi fuga maxime praesentium tempore dignissimos ratione! </p>
                             <a class="btn-primary"href="#">Read more</a>
                         </div>
-                        <div class="flex-30 item">
+                        <div class="flex-30 item flex-100">
                             <img  class="width-full" src="assets/media/03.png" alt="image-3">
                             <h3>Why Do we use it?</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam repudiandae ad ea, suscipit illo, 
                                 modi fuga maxime praesentium tempore dignissimos ratione! </p>
                             <a class="btn-primary"href="#">Read more</a>
                         </div>
-                        <div class="flex-30 item">
+                        <div class="flex-30 item flex-100">
                             <img  class="width-full" src="assets/media/04.png" alt="image-4">
                             <h3>Why Do we use it?</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam repudiandae ad ea, suscipit illo, 
@@ -78,13 +78,13 @@
             </section>
         </main>
         <footer class="footer">
-           <div class="flex container padding">
+           <div class="flex container padding coloum">
             <small>
                 &copy;Altcampus
             </small>
             <ul class="flex footer-icon">
-                <li><i class="fab fa-facebook-square"></i></li>
-                <li><i class="fab fa-twitter-square"></i></li>
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
             
            </div>
